Add build platform in action

--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           context: .
           push: true
+          platforms: ${{ steps.buildx.outputs.platforms }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
