Add echo metadata in action

--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -31,6 +31,11 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: mu777/odrive-cli
+      - name: Echo metadata
+        run: |
+          echo ${{ steps.meta.outputs.tags }}
+          echo ${{ steps.meta.outputs.labels }}
+
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
